fixed footer spacing

--- a/CSS/intro.css
+++ b/CSS/intro.css
@@ -292,13 +292,14 @@ aside {
 
 footer p {
     text-align: center;
-    margin-top: -4vw;
     padding-bottom: 20px;
     font-size: 14px;
 }
 
+footer nav {height: 214px; padding-top: 35px;}
+
 @media all and (max-width: 420px) {
     main p , .text-links {font-size: 16px;}
-    footer p {margin-top: 0;}
-    footer div {width: 75vw; margin: 0 auto;}
+    footer nav {padding-top: 0;}
+    footer div {width: 75vw; margin: 20px auto 0 auto;}
 }
